syntax = "proto3";

package shop;

service ShopService {
  rpc GetProducts (GetProductsRequest) returns (ProductList);
  rpc GetCategories (Empty) returns (CategoryList);
  rpc GetCartItems (UserId) returns (CartItemList);
  rpc AddToCart (AddToCartRequest) returns (OperationResult);
  rpc RemoveFromCart (CartItemIdentifier) returns (OperationResult);
  rpc UpdateCartQuantity (UpdateCartQuantityRequest) returns (OperationResult);
  rpc GetCartCount (UserId) returns (CartCount);
  rpc GetCurrencies (Empty) returns (CurrencyList);
}

message Empty {}

message GetProductsRequest {
  string category_id = 1;
  string search_query = 2;
  string currency_code = 3;
}

message Currency {
  string code = 1;
  string name = 2;
  string symbol = 3;
  double rate = 4;
  bool is_base = 5;
}

message CurrencyList {
  repeated Currency currencies = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
  string image_url = 5;
  int32 stock = 6;
  string created_at = 7;
  Category category = 8;
  Currency currency = 9;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message ProductList {
  repeated Product products = 1;
}

message CategoryList {
  repeated Category categories = 1;
}

message CartItem {
  string id = 1;
  string user_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  string created_at = 5;
  Product product = 6;
}

message CartItemList {
  repeated CartItem items = 1;
}

message CartItemIdentifier {
  string user_id = 1;
  string product_id = 2;
}

message UserId {
  string user_id = 1;
}

message AddToCartRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message UpdateCartQuantityRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message OperationResult {
  bool success = 1;
  string error = 2;
}

message CartCount {
  int32 count = 1;
}